5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1758_1580.log
== TEST (2019-05-23 11:23:23) 
-- CODE:
n = array(eval(input))
nm = array(eval(input))
i = j = k = l = n = o = p = 0
while i<len(n):
	j = j + 1 if n[i]<0 else j
	k = k + 1 if n[i]>=6 else k
	l = l + 1 if n[i]<6 and n[i]>=0 else l
	n = nm[i] if n[i]=max(n) else n
	if n[i]>=0 else o
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
File "XXXX", line 8
    n = nm[i] if n[i]=max(n) else n
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:29) 
-- CODE:
n = array(eval(input))
nm = array(eval(input))
i = j = k = l = n = o = p = 0
while i<len(n):
	j = j + 1 if n[i]<0 else j
	k = k + 1 if n[i]>=6 else k
	l = l + 1 if n[i]<6 and n[i]>=0 else l
	n = nm[i] if n[i]==max(n) else n
	if n[i]>=0 else o
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
File "XXXX", line 9
    if n[i]>=0 else o
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:37) 
-- CODE:
n = array(eval(input))
nm = array(eval(input))
i = j = k = l = n = o = p = 0
while i<len(n):
	j = j + 1 if n[i]<0 else j
	k = k + 1 if n[i]>=6 else k
	l = l + 1 if n[i]<6 and n[i]>=0 else l
	n = nm[i] if n[i]==max(n) else n
	if n[i]>=0:
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:51) 
-- CODE:
from numpy import*

n = array(eval(input))
nm = array(eval(input))
i = j = k = l = n = o = p = 0
while i<len(n):
	j = j + 1 if n[i]<0 else j
	k = k + 1 if n[i]>=6 else k
	l = l + 1 if n[i]<6 and n[i]>=0 else l
	n = nm[i] if n[i]==max(n) else n
	if n[i]>=0:
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:06) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<len(n):
	j = j + 1 if n[i]<0 else j
	k = k + 1 if n[i]>=6 else k
	l = l + 1 if n[i]<6 and n[i]>=0 else l
	n = nm[i] if n[i]==max(n) else n
	if n[i]>=0:
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:57) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	j = j + 1 if n[i]<0 else j
	k = k + 1 if n[i]>=6 else k
	l = l + 1 if n[i]<6 and n[i]>=0 else l
	n = nm[i] if n[i]==max(n) else n
	if n[i]>=0:
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:19) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]>=0:
	l = l + 1
	if n[i]==max(n):
	n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
File "XXXX", line 12
    l = l + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:25) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]>=0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:16) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]>=0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:02) 
-- CODE:
from numpy import*

n = int(array(eval(input())))
nm = int(array(eval(input())))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]>=0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:30) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]>=0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:51) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]==-1:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]!=-1:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:32:56) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]<0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:33:08) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]<0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:34:19) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]<0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:34:27) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j = j + 1
	if n[i]>=6:
		k = k + 1 
	if n[i]<6 and n[i]<0:
		l = l + 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o = o + n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:25) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = n = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]<0:
		l += 1
	if n[i]==max(n):
		n = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:36:20) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]<0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:36:48) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]<0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:36:57) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]<0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(m)
-- EXECUTION TIME:
0.566573
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
3
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
6
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
0
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:37:02) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]<0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:37:19) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]>0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:37:24) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]>0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(m)
-- EXECUTION TIME:
0.587173
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:37:48) 
-- CODE:
from numpy import*

n = array(eval(input()))
nm = array(eval(input()))
i = 0
j = k = l = m = o = p = 0
while i<size(n):
	if n[i]<0:
		j += 1
	if n[i]>=6:
		k += 1 
	if n[i]<6 and n[i]>=0:
		l += 1
	if n[i]==max(n):
		m = nm[i]
	if n[i]>=0:
		o += n[i]
		p += 1
	i+=1
print(j)
print(k)
print(l)
print(round(o/p,2))
print(m)
-- EXECUTION TIME:
0.543231
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
